--- a/my portfolio.css
+++ b/my portfolio.css
@@ -188,7 +188,7 @@ footer input[type="text"], footer input[type="email"] , footer textarea{
 .hide{
     display: none;
 }
-
+/* Mobilephone media query */
 @media screen and (max-width:576px) {
     .skills-container, 
     .resume-container,
@@ -234,9 +234,9 @@ footer input[type="text"], footer input[type="email"] , footer textarea{
      
 
 }
-
-@media screen and (max-width:576px) {
-   .resume-container{
-
-   }
+/* tablet specific media query */
+@media screen and (min-width:576px) and (max-width: 990px) {
+ .banner{
+    flex-direction: column;
+ }
 }
